# Intelligent_Building

./: .gitignore  Autenticador.cpp  Autenticador.hpp  Authenticator.cpp  Authenticator.hpp  DataCollector.cpp  DataCollector.hpp  FAT.cpp  FAT.hpp  FormatoBitacora.txt  HashHandler.cpp  HashHandler.hpp  Intento.ino  Log.cpp  Log.hpp  MessageHandler.cpp  MessageHandler.hpp  README.md  UserHandler.cpp  UserHandler.hpp  UserTest.cpp  Usuario.cpp  Usuario.hpp  exec  main  main.cpp  sensors_log_file.txt  usersData.txt  users_log_file.txt
AplicationQT/: CMakeLists.txt  CMakeLists.txt.user.7227ab7  CMakeLists.txt.user.af26854  CMakeLists.txt.user.dc714a3  createuser.cpp  createuser.h  createuser.ui  floorselectiondialog.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  menuwindow.ui  modifyuser.cpp  modifyuser.h  removeuser.h  removeuser.ui  sensorbuilding.cpp  sensorbuilding.ui  sensorfloor.h  viewbackup.cpp  viewbackup.h  viewbackup.ui  viewdatabasewindow.h  viewlog.h  viewlog.ui  viewnode.ui
Communication/: client.cpp  main.cpp
HW02/: VirtualMemoryManager.hpp
HW03/: server.cpp
PI-Edificio/: CMakeLists.txt  CMakeLists.txt.user.a3cd45a  CMakeLists.txt.user.b03a888  createuser.cpp  createuser.h  createuser.ui  floorselectiondialog.cpp  floorselectiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui  modifydatabase.cpp  modifydatabase.h  modifydatabase.ui  modifyuser.cpp  modifyuser.h  modifyuser.ui  removeuser.cpp  removeuser.h  removeuser.ui  resource.qrc  sensorbuilding.cpp  sensorbuilding.h  sensorbuilding.ui  sensorfloor.cpp  sensorfloor.h  sensorfloor.ui  viewbackup.cpp  viewbackup.h  viewbackup.ui  viewdatabasewindow.cpp  viewdatabasewindow.h  viewdatabasewindow.ui  viewlog.cpp  viewlog.h  viewlog.ui  (+6 more)
Phase03/: FAT.cpp  Node.cpp  log_DataNode.txt  log_client.txt  log_intermediary.txt  networkConfig.hpp  usersData.txt  usersData2.txt
Phase03/poor_mans_telnet/: poor_mans_telnet.ino
ProgramaOper/: README.md  Threads.cpp  client.cpp  exec  main.cpp  receiver  server.cpp  socketList.hpp
Tarea2_Oper/: README.md  VirtualMemoryManager.cpp  VirtualMemoryManager.hpp  main.cpp
build-PI-Edificio-Desktop_Qt_6_6_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake  users.csv  usersData.txt  users_log_file.txt
build-PI-Edificio-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-PI-Edificio-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-PI-Edificio-Desktop_Qt_6_6_0_GCC_64bit-Debug/PI-Edificio_autogen/: deps
etapa3PI/: Client.cpp  Client.hpp  ClientNode.cpp  ClientNode.hpp  DataNode.cpp  GalileoClient.cpp  Intermediary.cpp  Intermediary.hpp  Node.cpp  README.md  UserNode.cpp  UserNode.hpp  client.cpp  client3.cpp  client_2.cpp  log_DataNode.txt  log_UserNode.txt  log_intermediary.txt  main_dataNode.cpp  main_intermediary.cpp  main_userNode.cpp  networkConfig.hpp  sensorsData.txt  sensors_log_file  socketList.hpp  usersData.txt  utilities.hpp
etapa3PI/ArduinoClient/: ArduinoClient.ino
etapa4/etapa4PI/: Backup.cpp  Backup.hpp  Client.hpp  ClientNode.cpp  ClientNode.hpp  DataNode.cpp  FAT.cpp  Intermediary.cpp  Log.hpp  Node.hpp  README.md  UserNode.cpp  backup  client3.cpp  log_BackupNode.txt  log_DataNode.txt  log_UserNode.txt  log_data_node_02-12-2024-02-40-00.txt  log_data_node_02-12-2024-02-43-10.txt  log_intermediary.txt  (+14 more)
tarea3Oper/: Node.cpp  Node.hpp  README.md  UserNode.cpp  UserNode.hpp  client.cpp  main_intermediary.cpp  main_userNode.cpp  networkConfig.hpp  server.cpp  socketList.cpp  socketList.hpp  utilities.hpp
tarea6PI/: Client.cpp  Client.hpp  Intermediary.cpp  Intermediary.hpp  Node.cpp  Node.hpp  README.md  UserNode.hpp  client.cpp  intermediary  main_intermediary.cpp  main_userNode.cpp  socketList.hpp
(+449 files in other folders)
